--- a/mert_fairseq/config/pretrain/MERT_RVQ-VAE_CQT_95M.yaml
+++ b/mert_fairseq/config/pretrain/MERT_RVQ-VAE_CQT_95M.yaml
@@ -2,13 +2,13 @@
 common:
   fp16: true
   log_format: json
-  log_interval: 200
+  log_interval: 100
   seed: 1337
   # tensorboard_logdir: tblog_proj_name
   # wandb_project: wandb_proj_name
 
 checkpoint:
-  save_interval_updates: 25000
+  save_interval_updates: 5000
   keep_interval_updates: -1
   no_epoch_checkpoints: true
 
@@ -51,8 +51,10 @@ criterion:
 
 optimization:
   max_update: 400000
+  # max_update: 2000
   lr: [0.0005]
   clip_norm: 10.0
+  
 
 optimizer:
   _name: adam
